# Lambda

./: .gitignore  CMakeLists.txt  Lambda.h  README.md
Lambda/: main.cpp  monkey.blend
Lambda_maths/: complex_t.h  real_t.h  vec2.h  vec3.h
assets/: AssetImport.h  AssetImporter.cpp  AssetImporter.h  GraphImport.cpp  GraphImport.h  ImportUtilities.cpp  ImportUtilities.h  MaterialImport.cpp  MaterialImport.h  MeshImport.cpp  MeshImport.h  MeshImporter.h  ResourceManager.h  SceneImport.cpp  SceneImport.h
camera/: Aperture.cpp  Aperture.h  Camera.cpp  Camera.h  EnvironmentCamera.h  Film.cpp  Film.h  PinholeCamera.h  SphericalCamera.h  ThinLensCamera.h
core/: Instance.cpp  Instance.h  Object.h  Ray.h  RenderCoordinator.h  SPD_Data.cpp  SPD_Data.h  Scene.cpp  Scene.h  SceneGraph.h  Spectrum.cpp  Spectrum.h  Transformable.h  TriangleMesh.cpp  TriangleMesh.h
image/: Colour.h  Texture.cpp  Texture.h  TextureEncoding.cpp  TextureEncoding.h  cpp.hint
integrators/: DirectLightingIntegrator.cpp  DirectLightingIntegrator.h  Integrator.cpp  Integrator.h  PathIntegrator.cpp  PathIntegrator.h  UtilityIntegrators.cpp  UtilityIntegrators.h  VolumetricPathIntegrator.cpp
lambda_demo/: main.cpp  main__.cpp
lighting/: Blackbody.h  EnvironmentLight.cpp  EnvironmentLight.h  Light.cpp  Light.h  LightSampler.cpp  LightSampler.h  ManyLightSampler.cpp  ManyLightSampler.h  MeshLight.cpp  MeshLight.h  MeshPortal.h  Portal.cpp  Portal.h  RectPortal.h  TriangleLight.h
maths/: affine3.h  bounds.h  complex_t.h  maths.h  real_t.h  vec2.h  vec3.h
render/: MosaicRenderer.cpp  Render.cpp  (+6 more)
(+194 files in other folders)
